--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="./assets/logo.svg" />
@@ -7,7 +7,7 @@
     
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     
-    <title>Minha Carteira</title>
+    <title>Carteirinha</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
